--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -122,8 +122,8 @@
             <view data-gid='{{item.goodsInfo.gid}}' data-type='{{item.goodsInfo.type}}' bindtap='goToThePoiDetail'>
               <view class='img_row'>
                 <image class='bg' src='{{item.goodsBase.poster}}'></image>
-                <image class='top' wx:if='{{ false }}' src='../../img/index/top.png'></image>
-                <image class='ticket' wx:if='{{ false }}' src='../../img/index/ticket.png'></image>
+                <image class='top' wx:if='{{ item.goodsBase.top === 1 }}' src='../../img/index/top.png'></image>
+                <image class='ticket' wx:if='{{ item.goodsBase.coupon === 1 }}' src='../../img/index/ticket.png'></image>
               </view>
               <view class='title'>
                 <text>{{item.goodsInfo.name}}</text>
