--- a/pages/poi_detail/poi_detail.wxml
+++ b/pages/poi_detail/poi_detail.wxml
@@ -35,7 +35,13 @@
         <view class='label'>营业时间：</view>
         <view class='text'>
           <view class='date'>{{goods.goodsInfo.openTime}}</view>
-          <view class='tips'>建议游玩时间为 8小时，这个也是内这个内…</view>
+          <!-- <view class='tips'>建议游玩时间为 8小时，这个也是内这个内…</view> -->
+        </view>
+      </view>
+      <view class='business_hours'>
+        <view class='label'>游玩时间：</view>
+        <view class='text'>
+          <view class='date'>{{goods.goodsInfo.playTime}}</view>
         </view>
       </view>
       <view class='contact_number'>
@@ -51,7 +57,7 @@
         <map id='myMap' style='width: 100%; height: 249rpx;' latitude="{{latitude}}" longitude="{{longitude}}" markers="{{markers}}" show-location></map>
       </view>
     </view>
-    <view class='area'>
+    <view class='area' wx:if='{{goodsItem.length}}'>
       <view class='area_title'>产品价格</view>
       <view class='product'>
         <block wx:for='{{goodsItem}}' wx:key='{{index}}'>
@@ -81,10 +87,10 @@
           <view class='user_info'>
             <view class='user'>
               <view class='avatar'>
-                <image src='{{item.avatar}}'></image>
+                <image src='{{item.avatar || "../../img/common/avatar.png"}}'></image>
               </view>
               <view class='name_date'>
-                <view class='name'>{{item.nickname}}</view>
+                <view class='name'>{{item.nickname || '游客'}}</view>
                 <view class='date'>{{dateFr.formatTime(item.createAt)}}</view>
               </view>
             </view>
