--- a/pages/progList/progList.wxml
+++ b/pages/progList/progList.wxml
@@ -12,8 +12,8 @@
       <view class='list' data-gid='{{item.goodsInfo.gid}}' data-type='{{item.goodsInfo.type}}' bindtap='goToThePoiDetail'>
         <view class='img_row'>
           <image class='bg' src='{{item.goodsBase.poster}}'></image>
-          <image class='top' src='../../img/index/top.png'></image>
-          <image class='ticket' src='../../img/index/ticket.png'></image>
+          <image class='top' src='../../img/index/top.png' wx:if='{{item.goodsBase.top === 1}}'></image>
+          <image class='ticket' src='../../img/index/ticket.png' wx:if='{{item.goodsBase.coupon === 1}}'></image>
         </view>
         <view class='title'>
           <text>{{item.goodsInfo.name}}</text>
