--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -94,7 +94,8 @@
   <view class='hot_recommend'>
     <view class='title'>热门推荐</view>
     <view class='tabs_title'>
-      <view class='{{ recommendType === 1 ? "active" : "" }}' data-type='1' bindtap='handleSwichChange'>
+      <view class='tabs_title_text'>
+        <view class='{{ recommendType === 1 ? "active" : "" }}' data-type='1' bindtap='handleSwichChange'>
         <text>一日游</text>
         <image src='../../img/index/tabs.png'></image>
       </view>
@@ -114,6 +115,11 @@
         <text>购物</text>
         <image src='../../img/index/tabs.png'></image>
       </view>
+      </view>
+       <view class='tabs_show_type'>
+        <image src='../../img/index/vertical.png'></image>
+        <image src='../../img/index/horizontal.png' wx:if='{{false}}'></image>
+       </view>
     </view>
     <view class='tabs_content'>
       <view class='active'>
