--- a/pages/couponList/couponList.wxml
+++ b/pages/couponList/couponList.wxml
@@ -3,7 +3,7 @@
 <view class='container'>
   <view class='main_row'>
       <block wx:for="{{coupons}}" wx:key="{{index}}">
-        <view class='main' data-couponId='{{item.id}}' bindtap='goToTheCouponsDetail'>
+        <view class='main' data-couponId='{{item.couponId}}' data-id='{{item.id}}' bindtap='goToTheCouponsDetail'>
           <image class='bg' src='../../img/index/coupon_bg.png'></image>
           <view class='content'>
             <view class='top'>
