--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -65,11 +65,13 @@
   height: 192rpx;
   background-color: #F3F3F3;
   border-radius: 50%;
+  overflow: hidden;
 }
 
 .right .avatar image{
   width: 100%;
   height: 100%;
+  vertical-align: top;
 }
 
 .order{
