--- a/pages/myCoupon/myCoupon.wxml
+++ b/pages/myCoupon/myCoupon.wxml
@@ -1,4 +1,5 @@
 <!-- myCoupon.wxml -->
+<wxs module="dateFr" src='../../utils/filter.wxs'></wxs>
 <view class='container'>
   <view class='tabs'>
     <view class='{{body.qryType === 1 ? "active" : ""}}' data-type='1' bindtap='changeQryType'>
@@ -19,7 +20,7 @@
     </view>
     <view class='un_empty' wx:if='{{use.length}}'>
       <block wx:for="{{use}}" wx:key="{{index}}">
-        <view class='main' data-couponId='{{item.id}}' bindtap='goToTheCouponsDetail'>
+        <view class='main' data-couponId='{{item.couponId}}' data-id='{{item.id}}' bindtap='goToTheCouponsDetail'>
           <image class='bg' src='../../img/index/coupon_bg.png'></image>
           <view class='content'>
             <view class='top'>
@@ -77,7 +78,7 @@
     </view>
     <view class='un_empty' wx:if='{{expire.length}}'>
       <block wx:for="{{expire}}" wx:key="{{index}}">
-        <view class='main' data-couponId='{{item.id}}' bindtap='goToTheCouponsDetail'>
+        <view class='main' data-couponId='{{item.couponId}}' data-id='{{item.id}}' bindtap='goToTheCouponsDetail'>
           <image class='bg' src='../../img/index/coupon_bg.png'></image>
           <view class='content'>
             <view class='top'>
